2004-06-20 Gustaf.Neumann@wu-wien.ac.at
	* removed inclusion of <tclCompile.h>
        * second version of delegatore methods cmd and instcmd 

            A delegator method is defined via 
               Class instcmd method COMMAND ARGS
            a call to the defined method with some args
               obj method arg1 arg2 arg3...
            is mapped to
               COMMAND ARGS arg1 <caller> INSERTTOKENS arg2 arg3...

             Class instcmd <methodname> <commandname> \
                   ?-nocaller? \
                   ?-nomethod? \
                   ?-inscope? \
                   ?-skip nr_of_tokens? \
                   ?-insert tokens?
                   ?-prefix string? \
                   ?-defaultmethod subcommand? \

          where 
            methodname: name of an instcommand for the class 
                   to be registered,
            commandname: command that recieves delegation
            -nomethod:   don't insert the callers method 
            -nocaller:   don't insert caller after method
            -inscope:    evalute method in obj scope
            -skip:       skip n arguments from the call. "-skip 1"
                         means that not the "method" from the invocation is
                         used as the method call, but the first argument
            -prefix:     prefix, to be added in front of 
                         called method (to avoid name clashes 
                         with "set", etc.)
            -insert:     tokens to be inserted after the caller

            -defaultmethod: when number of arguments is not sufficient 
                         to determine the called method, use the specified 
                         value to be used as method name (only useful when
                         -skip is used und the arguments run out)
                         (e.g. [$obj info] be mapped to COMMAND showInfoOptions)


2004-06-18 Gustaf.Neumann@wu-wien.ac.at