@@ -1,6 +1,10 @@
+2004-06-240 Gustaf.Neumann@wu-wien.ac.at
+	* fixed coredump for delegation to object without method specified
+          (many thanks fot Bryan Schofield for the bug report)
+	
 2004-06-20 Gustaf.Neumann@wu-wien.ac.at
 	* removed inclusion of <tclCompile.h>
-        * second version of delegatore methods cmd and instcmd 
+        * second version of delegator methods cmd and instcmd 
 
             A delegator method is defined via 
                Class instcmd method COMMAND ARGS
